[package]
name = "nihav_allstuff"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies]
nihav_core = { path = "../nihav-core" }
nihav_commonfmt = { path = "../nihav-commonfmt" }
nihav_duck = { path = "../nihav-duck" }

[dev-dependencies]
nihav_registry = { path = "../nihav-registry" }
