[package]
name = "nihav_commonfmt"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies.nihav_core]
path = "../nihav-core"

[dependencies.nihav_registry]
path = "../nihav-registry"

[dependencies.nihav_codec_support]
path = "../nihav-codec-support"

[dev-dependencies]
nihav_realmedia = { path = "../nihav-realmedia", default-features=false, features = ["all_demuxers"] }

[features]
default = ["all_decoders", "all_demuxers", "all_encoders", "all_muxers"]
decoders = []
demuxers = []
encoders = []
muxers = []
all_demuxers = ["demuxer_avi", "demuxer_mov", "demuxer_y4m"]
demuxer_avi = ["demuxers"]
demuxer_mov = ["demuxers"]
demuxer_y4m = ["demuxers"]
all_muxers = ["muxer_avi"]
muxer_avi = ["muxers"]

all_decoders = ["all_video_decoders"]

all_video_decoders = ["decoder_clearvideo", "decoder_jpeg", "decoder_rawvideo", "decoder_rawvideo_ms", "decoder_zmbv"]
decoder_clearvideo = ["decoders"]
decoder_jpeg = ["decoders"]
decoder_rawvideo = ["decoders"]
decoder_rawvideo_ms = ["decoders"]
decoder_zmbv = ["decoders"]

all_encoders = []