[package]
name = "nihav_duck"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies.nihav_core]
path = "../nihav-core"

[dependencies.nihav_codec_support]
path = "../nihav-codec-support"
features = ["fft", "dsp_window", "blockdsp"]

[dev-dependencies]
nihav_commonfmt = { path = "../nihav-commonfmt", default-features=false, features = ["all_demuxers", "all_muxers"] }

[features]
default = ["all_decoders", "all_encoders", "all_demuxers"]

all_decoders = ["all_video_decoders"]
all_video_decoders = ["decoder_vp6"]
decoders = []

decoder_vp6 = ["decoders"]

all_encoders = ["all_video_encoders"]
all_video_encoders = ["encoder_vp6"]
encoders = []

encoder_vp6 = ["encoders"]

all_demuxers = ["demuxer_ivf"]
demuxers = []

demuxer_ivf = ["demuxers"]